@@ -229,10 +229,38 @@ The entry `config_path` contains a list of the files that the configuration was 
 
 Merge the configuration hash into the given hash.
 
-If merge given,
-the result will be a combination of the hashes,
-otherwise
-what's in the object will overwrite what's in the defaults hash.
+Options:
+
+- merge
+
+    Usually what's in the object will overwrite what's in the defaults hash,
+    if given,
+    the result will be a combination of the hashes.
+
+- section
+
+    Merge in that section from the configuration file.
+
+- deep
+
+    Try harder to merge in all configuration from the global section of the configuration file.
+
+    package MyPackage;
+    use Params::Get;
+    use Config::Abstraction;
+
+    sub new
+    {
+      my $class = shift;
+
+      my $params = Params::Get::get_params(undef, \@_) || {};
+
+      if(my $config = Config::Abstraction->new(env_prefix => "${class}::")) {
+        $params = $config->merge_defaults(defaults => $params, merge => 1, section => $class);
+      }
+
+      return bless $params, $class;
+  }
 
 ## AUTOLOAD
 
