@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 
 0.25	Thu May 15 07:57:07 EDT 2025
 	Added the 'merge' option
+	Improved the documentation of the merge_defaults routine
 
 0.24	Mon May 12 16:15:09 EDT 2025
 	Added the 'no_fixate' option
